--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-sdk.dir=
+#Wed Jan 08 16:30:34 CST 2025
+sdk.dir=/Users/bryanxplayz/Library/Android/sdk
